feat: udistrital/sga_documentacion#507 Controladores put y post grupo de estudio controlando asignaciones y desasignaciones de espacios academicos, refactorizacion de metodos put (eliminando una llamada get)
