# controllers/grupo_estudio.go
@@ -15,6 +15,8 @@ type GrupoEstudioController struct {
 func (c *GrupoEstudioController) URLMapping() {
 	c.Mapping("GetGruposEstudioSegunHorarioYSemestre", c.GetGruposEstudioSegunHorarioYSemestre)
 	c.Mapping("DeleteGrupoEstudio", c.DeleteGrupoEstudio)
+	c.Mapping("PostGrupoEstudio", c.PostGrupoEstudio)
+	c.Mapping("PutGrupoEstudio", c.PutGrupoEstudio)
 }
 
 // @Title getGrupoEstudioSegunHorarioYSemestre
@@ -53,6 +55,48 @@ func (c *GrupoEstudioController) DeleteGrupoEstudio() {
 	respuesta := services.DeleteGrupoEstudio(grupoEstudioId)
 
 	c.Ctx.Output.SetStatus(respuesta.Status)
+	c.Data["json"] = respuesta
+	c.ServeJSON()
+}
+
+// @Title PostGrupoEstudio
+// @Description create grupo de estudio
+// @Param   body        body    {}  true		"body"
+// @Success 200 {}
+// @Failure 400 the request contains incorrect syntax
+// @router / [post]
+func (c *GrupoEstudioController) PostGrupoEstudio() {
+
+	defer errorhandler.HandlePanic(&c.Controller)
+
+	grupoEstudio := c.Ctx.Input.RequestBody
+
+	respuesta := services.CreateGrupoEstudio(grupoEstudio)
+
+	c.Ctx.Output.SetStatus(respuesta.Status)
+
+	c.Data["json"] = respuesta
+	c.ServeJSON()
+}
+
+// @Title PutGrupoEstudio
+// @Description Update grupo de estudio
+// @Param   id      path    string  true        "grupo de estudio id"
+// @Param   body        body    {}  true		"body"
+// @Success 200 {}
+// @Failure 400 the request contains incorrect syntax
+// @router /:id [put]
+func (c *GrupoEstudioController) PutGrupoEstudio() {
+
+	defer errorhandler.HandlePanic(&c.Controller)
+
+	grupoEstudio := c.Ctx.Input.RequestBody
+	grupoEstudioId := c.Ctx.Input.Param(":id")
+
+	respuesta := services.UpdateGrupoEstudio(grupoEstudioId, grupoEstudio)
+
+	c.Ctx.Output.SetStatus(respuesta.Status)
+
 	c.Data["json"] = respuesta
 	c.ServeJSON()
 }
